# yaru

./: README.md  meson.build  meson_options.txt
common-scss/: _colors.scss  _common_variables.scss  _drawing.scss  _global.scss
gnome-shell/src/: gnome-shell.scss.in  meson.build
gnome-shell/src/gnome-shell-sass/: _colors.scss  _common.scss  _dock.scss  _drawing.scss  _high-contrast-colors.scss  _palette.scss
gnome-shell/src/gnome-shell-sass/widgets/: _app-grid.scss  _dash.scss  _keyboard.scss  _login-dialog.scss  _looking-glass.scss  _misc.scss  _osd.scss  _panel.scss  _popovers.scss  _screen-shield.scss  _scrollbars.scss  _search-results.scss  _switcher-popup.scss  _window-picker.scss  _workspace-switcher.scss  _workspace-thumbnails.scss
gtk/src/: meson.build
gtk/src/dark/gtk-3.0/: gtk.scss
gtk/src/dark/gtk-3.20/: gtk.scss
gtk/src/default/gtk-3.0/: _colors.scss  _common.scss  _drawing.scss
gtk/src/default/gtk-3.20/: _apps.scss  _colors.scss  _common.scss  _drawing.scss  _palette.scss  _tweaks.scss  gtk.scss
gtk/src/default/gtk-3.20/libhandy/: _Adwaita-base.scss
